# arnaldAI

./: .env.example  .gitignore  AUDITORIA_cerebro_artificial_estado_real.md  CHANGELOG.md  ISSUE.md  ISSUE_current_info_requests_do_not_trigger_external_lookup.md  README.md  SPEC.md  _debug_bootstrap.py  issue-generic-capability-routing.md  pyproject.toml  pytest_output.txt  spec_patch.diff
.github/: copilot-instructions.md
.github/agents/: Arnaldo.agent.md  planner.agent.md  tdd.agent.md  (+1 more)
arnaldo/: __init__.py  chat.py  cli.py  core.py  kernel.py
docs/: architecture.md  arquitetura.md  backlog-mestre.md  minimo.md  operations.md  rtk-setup-guide.md
tests/: conftest.py  support_llm.py  test_adaptive_kernel.py  test_adaptive_planner.py  test_agent_subgraphs.py  test_brain.py  test_brain_llm.py  test_builtin_capabilities.py  test_capabilities_pipeline.py  test_capabilities_security.py  test_capability_catalog.py  test_capability_needs.py  test_capability_resolver.py  test_cli.py  test_contract_registry.py  test_convergence_v5.py  test_convergence_v6.py  test_cross_layer_links.py  test_dynamic_features.py  test_entrypoints.py  test_episteme.py  test_episteme_pipeline.py  test_execution_profile.py  test_forager.py  test_forager_rewrite.py  test_gaps.py  test_gaps_advanced.py  test_gaps_brain.py  test_graph.py  test_graph_execution.py  test_graph_refs.py  test_graph_runtime_classify.py  test_graph_runtime_integration.py  test_graph_workflows.py  test_ingester_entities.py  test_kernel.py  test_learning.py  test_lens.py  test_live_data_shortcut.py  test_llm_integration.py  (+18 more)
(+183 files in other folders)
